Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 6.2.2
-
Fix Version/s: 6.3.0 Beta1, 6.4.0 Beta1
-
Component/s: Connectivity: Bluetooth
-
Labels:
-
Environment:macOS 12.1
-
Platform/s:
-
Story Points:3
-
Commits:6224fee61f (qt/qtconnectivity/dev) 8e28f62c64 (qt/qtconnectivity/6.2) cbb46a9395 (qt/qtconnectivity/6.3) 8e28f62c64 (qt/tqtc-qtconnectivity/6.2) 6224fee61f (qt/tqtc-qtconnectivity/dev) cbb46a9395 (qt/tqtc-qtconnectivity/6.3)
-
Sprint:Team One Foundation Sprint 49, Team One Foundation Sprint 50
Description
There is no readyRead signal from QBluetoothSocket coming any more when a menu is selected and the drop down menu appears.
This happens on Monterey on both M1 and Intel.
This does not happen in older macOS like Big Sur.