Document the bluetooth socket data pausing on macOS Monterey

Fixes: QTBUG-99410
Change-Id: I600a861821b87978b9bbcd425d30f49ba6b1aeea
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 6224fee61f0e8a77031dbd7edbb87bd77c43d710)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>